--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@auth/prisma-adapter": "^1.0.1",
     "@hookform/resolvers": "^3.3.1",
     "@prisma/client": "^5.2.0",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
